Added a code chunk to simplify and streamline Sv profile plotting. WORK IN PROGRESS.

--- a/PanArctic_DSL_analyses.Rmd
+++ b/PanArctic_DSL_analyses.Rmd
@@ -194,6 +194,71 @@ Sv_raster %>%
         axis.line=element_line())
 ```
 
+
+**WORK IN PROGRESS**
+
+I'm trying to streamline code.
+
+```{r Sv-profiles-area-year-in-progress, fig.align='center', fig.width=6.5, fig.height=3}
+col_pal <- c("#80CBB1", "#347BA5", "#302346") # Custom colour palette
+Sv_area_year <- Sv_raster %>%
+  group_by(depth, area, year) %>%
+  # Calculate mean and median Sv profiles per area per year
+  summarise(sv_lin_median_areayear = median(sv_lin_median),
+            sv_lin_q2.5_areayear = median(sv_lin_q2.5),
+            sv_lin_q97.5_areayear = median(sv_lin_q97.5)) %>%
+  # Transform into volume backscattering strength (dB)
+  mutate(Sv_median = 10 * log10(sv_lin_median_areayear), 
+         Sv_q2.5 = 10 * log10(sv_lin_q2.5_areayear),
+         Sv_q97.5 = 10 * log10(sv_lin_q97.5_areayear)) %>%
+  ungroup() %>%
+  # Plotting details
+  # # # Remove empty water column and very low backscatter
+  # mutate(Sv_median_1 = if_else(Sv_median < -200, NaN, Sv_median),
+  #        Sv_q2.5_1 = if_else(Sv_q2.5 < -200, NaN, Sv_q2.5),
+  #        Sv_q97.5_1 = if_else(Sv_q97.5 < -105, NaN, Sv_q97.5)) %>%
+  # Remove empty water column and very low backscatter
+  mutate(Sv_q97.5_1 = if_else(Sv_q97.5 < -105, NaN, Sv_q97.5),
+         Sv_q2.5_1 = case_when(Sv_q97.5 < -105 ~ NaN,
+                               Sv_q2.5 < -105 ~ NaN,
+                               Sv_q2.5 >= -105 ~ Sv_q2.5)) %>%
+  # Replace low values by min limit for plotting continuous ribbon
+  mutate(Sv_q2.5_2 = if_else(is.na(Sv_q2.5_1) == T & is.na(Sv_q97.5_1) == F, -105,
+                             if_else(is.na(Sv_q2.5_1) == T & is.na(Sv_q97.5_1) == F, -105, 
+                                     if_else(is.na(Sv_q2.5_1) == F & Sv_q2.5_1 <= -105, -105, Sv_q2.5_1))),
+         Sv_q97.5_2 = Sv_q97.5_1) %>%
+  # mutate(Sv_median_2 = if_else(is.na(Sv_median_1) == F & Sv_median_1 <= -105, -105, Sv_median_1),
+  #        Sv_q2.5_2 = if_else(is.na(Sv_median_1) == F & is.na(Sv_q2.5_1) == T & is.na(Sv_q97.5_1) == F, -105,
+  #                    if_else(is.na(Sv_median_1) == T & is.na(Sv_q2.5_1) == T & is.na(Sv_q97.5_1) == F, -105, 
+  #                    if_else(is.na(Sv_q2.5_1) == F & Sv_q2.5_1 <= -105, -105, Sv_q2.5_1))),
+  #        Sv_q97.5_2 = Sv_q97.5_1) %>%
+  arrange(year, area, depth) %>%
+  # filter(area == "BF_CAA") %>%
+  # mutate(area=factor(case_when(area == "BF_CAA" ~ "Beaufort Sea &\nCan. Arctic Archipelago",
+  #                              area == "BB" ~ "Baffin Bay",
+  #                              area == "SV" ~ "Svalbard"),
+  #                    levels = c("Beaufort Sea &\nCan. Arctic Archipelago", "Baffin Bay", "Svalbard"))) %>%
+  # Plot
+  ggplot() +
+  geom_vline(xintercept = 200, lty = 2, col = "grey20") +
+  # geom_ribbon(aes(x = depth, ymin = Sv_q2.5_2, ymax = Sv_q97.5_2, fill = as.factor(year), group = year), alpha = 0.2) +
+  # geom_line(aes(x = depth, y = Sv_median_2, col = as.factor(year), group = year)) +
+  geom_ribbon(aes(x = depth, ymin = Sv_q2.5, ymax = Sv_q97.5, fill = as.factor(year), group = year), alpha = 0.2, na.rm=T) +
+  geom_line(aes(x = depth, y = Sv_median, col = as.factor(year), group = year)) +
+  scale_x_reverse("Depth (m)", breaks = seq(0, 1000, 200)) +
+  # geom_hline(yintercept = -105, col = "white") +
+  # coord_cartesian(ylim = c(-105, -65)) +
+  # scale_y_continuous(expression("S"[V]*" (dB re 1 m"^-1*")"), breaks = seq(-200, 0, 10), limits = c(-105, -65), expand = c(0, 0)) +
+  scale_color_manual(values = col_pal) +
+  scale_fill_manual(values = col_pal) +
+  coord_flip(ylim = c(-100, -65)) +
+  facet_grid( ~ area) +
+  theme(legend.title = element_blank(), legend.position = c(0.94, 0.275), legend.background = element_blank(),
+        legend.key = element_blank(),panel.border = element_blank(), axis.line = element_line())
+Sv_area_year
+```
+
+
 # Supplementary data
 
 ## Table S3. Acoustic settings
