--- a/PanArctic_DSL_sea_ice.Rmd
+++ b/PanArctic_DSL_sea_ice.Rmd
@@ -156,25 +156,27 @@ rm(request, tmp_raw, tmp_coord, tmp_seaice, tmp) # Remove unused variables
 
 Plot data to see if reprojection worked.
 
-```{r plot-seaice-latlon-cdr, message=FALSE, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
+```{r plot-seaice-latlon-cdr, fig.align='center', fig.height=3.25, fig.width=6, message=FALSE, warning=FALSE, dpi=600}
 read_csv("data/remote_sensing/sea_ice/20150212_ice_conc.csv") %>%
   ggplot(aes(x = lon, y = lat, fill = ice_conc)) + 
   geom_tile() + 
-  scale_fill_viridis_c() +
-  ggtitle("2015-02-12 Ice concentration (%) CDR")
+  scale_fill_viridis_c("Ice concentration (%)") +
+  ggtitle("2015-02-12 - CDR") + 
+  coord_cartesian(expand = c(0, 0))
 ```
 
-```{r plot-seaice-latlon-icdr, message=FALSE, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
+```{r plot-seaice-latlon-icdr, fig.align='center', fig.height=3.25, fig.width=6, message=FALSE, warning=FALSE, dpi=600}
 read_csv("data/remote_sensing/sea_ice/20170212_ice_conc.csv") %>%
   ggplot(aes(x = lon, y = lat, fill = ice_conc)) + 
   geom_tile() + 
-  scale_fill_viridis_c() +
-  ggtitle("2017-02-12 Ice concentration (%) ICDR")
+  scale_fill_viridis_c("Ice concentration (%)") +
+  ggtitle("2017-02-12 - ICDR") + 
+  coord_cartesian(expand = c(0, 0))
 ```
 
 ## Tidy sea ice data
 
-I calculate the day of ice break-up, sea ice and open-water duration, and mean sea ice concentration for each cell. I calculate open-water duration from one sea ice minimum extent to the next. I retrieved the dates of the sea ice minimum extent from [NSIDC](http://nsidc.org/arcticseaicenews/2021/09/arctic-sea-ice-at-highest-minimum-since-2014/).
+I calculate the day of ice break-up, sea ice and open-water duration, and mean sea ice concentration for each cell. I calculate open-water duration from one sea ice minimum extent to the next. I retrieved the dates of the sea ice minimum extent from [NSIDC](http://nsidc.org/arcticseaicenews/2021/09/arctic-sea-ice-at-highest-minimum-since-2014/). We define a cell being ice-covered when the mean sea ice concentration is above 15 % [(as per NSIDC Sea Ice Index)](https://nsidc.org/cryosphere/glossary/term/ice-extent).
 
 ```{r seaice-tidying, message=FALSE}
 date_min_seaice <- c(as.POSIXct("2014-09-17", tz = "UTC"), # Define dates of minimum sea ice extent
@@ -183,20 +185,52 @@ date_min_seaice <- c(as.POSIXct("2014-09-17", tz = "UTC"), # Define dates of min
                      as.POSIXct("2017-09-13", tz = "UTC"))
 seaice <- list.files("data/remote_sensing/sea_ice", pattern = "*_ice_conc.csv", full.names = T) %>% # List files in folder
   map_dfr(.f = ~ read_csv(., col_types = list("n", "n", "D", "n", "n", "n", "n"))) %>% # Read sea ice files
-  filter(date >= min(date_min_seaice) & date <= max(date_min_seaice)) %>%
   mutate(date = ymd(date),
          season = case_when(date >= date_min_seaice[1] & date <= date_min_seaice[2] ~ 2015,
                             date >= date_min_seaice[2] & date <= date_min_seaice[3] ~ 2016,
                             date >= date_min_seaice[3] & date <= date_min_seaice[4] ~ 2017),
          year = year(date),
-         month = month(date),
-         yday = yday(date),
-         day = day(date),
-         week = week(date),
          area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
                                  lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
                                  lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
                        levels = c("BF_CAA", "BB", "SV", "Other")))
-save(seaice, file="data/remote_sensing/remote_sensing_seaice.RData") # Save data
+seaice_season <- seaice %>% # Calculate metrics for each season
+  filter(is.na(season) == F) %>% # Remove data outside of seasons (early 2014 and late 2017)
+  mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
+  group_by(season, lat, lon) %>%
+  mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
+  summarise(total_day = n(),
+            seaice_duration = sum(ice_covered_day),
+            openwater_duration = total_day - seaice_duration,
+            mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
+seaice_year <- seaice %>% # Calculate metrics for each season
+  filter(year >= 2015) %>% # Remove data from 2014
+  mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
+  group_by(year, lat, lon) %>%
+  mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
+  summarise(total_day = n(),
+            seaice_duration = sum(ice_covered_day),
+            openwater_duration = total_day - seaice_duration,
+            mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
+save(seaice, seaice_season, seaice_year, file = "data/remote_sensing/remote_sensing_seaice.RData") # Save data
 ```
 
+Plot data to see if calculations worked.
+
+```{r map-openwater-duration, fig.align='center', fig.height=6, fig.width=6, warning=FALSE, dpi=600}
+seaice_year %>%
+  ggplot(aes(x = lon, y = lat, fill = openwater_duration)) +
+  geom_tile() + 
+  scale_fill_viridis_c("Open water\nduration (days)", option = "inferno", direction = -1) +
+  facet_wrap(~ year, ncol = 1) + 
+  coord_cartesian(expand = c(0, 0))
+```
+
+```{r map-mean-ice-concentration, fig.align='center', fig.height=6, fig.width=6, warning=FALSE, dpi=600}
+seaice_year %>%
+  ggplot(aes(x = lon, y = lat, fill = mean_ice_conc)) +
+  geom_tile() + 
+  scale_fill_viridis_c("Mean ice\nconcentration (%)", option = "viridis") +
+  facet_wrap(~ year, ncol = 1)+ 
+  coord_cartesian(expand = c(0, 0))
+```
