--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -20,7 +20,57 @@ library(ecmwfr)     # Download Copernicus data
 
 Code that downloads sea ice data from the [Copernicus website]( https://cds.climate.copernicus.eu/cdsapp#!/dataset/satellite-sea-ice-concentration?tab=overview). We use the daily sea ice concentration derived from satellite observations from ECMWF. Data is downloaded in two batches because ECMWF changed their Climate Data Record (CDR) on 2016-01-01. I changed the sea ice data projection from Lambert Azimuthal Equal Area (EPSG:6931) to WGS84 (EPSG:4326) and match the resolution to that of backscatter anomalies (2 deg longitude * 1 deg latitude).
 
-## CDR data 2014-01-01 - 2015-12-31
+## CDR data 2015-01-01 - 2015-12-31
+
+Download "raw" data that I only crop to match the area of interest to reduce the file size. 
+
+```{r download-seaice-CDR, eval=FALSE, message=FALSE}
+# Date range of interest
+dates <- seq(ymd("2015-01-01"), ymd("2015-12-31"), 1)
+# Download data
+for (d in dates) {
+  # Format years, month, and day to be correctly read in the request
+  year = as.character(year(as.Date(d, origin = "1970-01-01")))
+  month = if_else(as.numeric(month(as.Date(d, origin =" 1970-01-01"))) < 10,
+                  paste0("0", as.character(month(as.Date(d, origin = "1970-01-01")))),
+                  as.character(month(as.Date(d, origin = "1970-01-01"))))
+  day = if_else(as.numeric(day(as.Date(d, origin = "1970-01-01"))) < 10,
+                paste0("0", as.character(day(as.Date(d, origin = "1970-01-01")))),
+                as.character(day(as.Date(d, origin = "1970-01-01"))))
+  request <- list(version = "v2", # Create request
+                  variable = "all",
+                  format = "zip",
+                  origin = "eumetsat_osi_saf",
+                  region = "northern_hemisphere",
+                  cdr_type = "cdr",
+                  year = year,
+                  month = month,
+                  day = day,
+                  dataset_short_name = "satellite-sea-ice-concentration",
+                  target = "download.zip")
+  print(paste0("Downloading ", request$dataset_short_name, " from ", year, "-", month, "-", day))
+  tmp_raw <- wf_request(user = "113650", # Download requested file
+                        request = request, 
+                        transfer = T, 
+                        verbose = F,
+                        path = "data/remote_sensing/sea_ice/tmp") %>%
+    unzip(exdir = "data/remote_sensing/sea_ice/tmp") %>%  # Unzip file
+    tidync() %>% 
+    activate("D2,D3") %>%
+    hyper_filter(xc = xc >= -2700 & xc <= 2700, yc = yc >= -2700 & yc <= 2700) # Crop data to fit area of interest
+  tmp_coord <- tmp_raw %>% # Extract latlon and laea coordinates
+    activate("D2,D3") %>%
+    hyper_tibble()
+  tmp_seaice <- tmp_raw %>%
+    activate("D2,D3,D0") %>%
+    hyper_tibble() %>%
+    left_join(., tmp_coord, by = c("xc", "yc")) %>% # Join latlon coordinates to sea ice data
+    mutate(date = ymd(format(as_datetime(time, origin = "1978-01-01", tz = "UTC"), format = "%Y%m%d"))) 
+  write_csv(tmp_seaice, file = paste0("data/remote_sensing/sea_ice/", year, month, day, "_laea_ice_conc.csv")) # Save as a csv file
+  file.remove(list.files("data/remote_sensing/sea_ice/tmp", full.names = T)) # Delete temporary netcdf and zip files
+}
+rm(request, tmp_raw, tmp_coord, tmp_seaice) # Remove unused variables
+```
 
 ```{r download-and-reproject-seaice-CDR, eval=FALSE, message=FALSE}
 # Define projections: latlon (acoustic and CTD data), and laea (sea ice data)
@@ -87,6 +137,54 @@ rm(request, tmp_raw, tmp_coord, tmp_seaice, tmp) # Remove unused variables
 
 ## ICDR data 2016-01-01 - 2017-12-31
 
+```{r download-seaice-ICDR, eval=FALSE, message=FALSE}
+# Date range of interest
+dates <- seq(ymd("2017-06-10"), ymd("2017-12-31"), 1)
+# Download data
+for (d in dates) {
+  # Format years, month, and day to be correctly read in the request
+  year = as.character(year(as.Date(d, origin = "1970-01-01")))
+  month = if_else(as.numeric(month(as.Date(d, origin =" 1970-01-01"))) < 10,
+                  paste0("0", as.character(month(as.Date(d, origin = "1970-01-01")))),
+                  as.character(month(as.Date(d, origin = "1970-01-01"))))
+  day = if_else(as.numeric(day(as.Date(d, origin = "1970-01-01"))) < 10,
+                paste0("0", as.character(day(as.Date(d, origin = "1970-01-01")))),
+                as.character(day(as.Date(d, origin = "1970-01-01"))))
+  request <- list(version = "v2", # Create request
+                  variable = "all",
+                  format = "zip",
+                  origin = "eumetsat_osi_saf",
+                  region = "northern_hemisphere",
+                  cdr_type = "icdr",
+                  year = year,
+                  month = month,
+                  day = day,
+                  dataset_short_name = "satellite-sea-ice-concentration",
+                  target = "download.zip")
+  print(paste0("Downloading ", request$dataset_short_name, " from ", year, "-", month, "-", day))
+  tmp_raw <- wf_request(user = "113650", # Download requested file
+                        request = request, 
+                        transfer = T, 
+                        verbose = F,
+                        path = "data/remote_sensing/sea_ice/tmp") %>%
+    unzip(exdir = "data/remote_sensing/sea_ice/tmp") %>%  # Unzip file
+    tidync() %>% 
+    activate("D2,D3") %>%
+    hyper_filter(xc = xc >= -2700 & xc <= 2700, yc = yc >= -2700 & yc <= 2700) # Crop data to fit area of interest
+  tmp_coord <- tmp_raw %>% # Extract latlon and laea coordinates
+    activate("D2,D3") %>%
+    hyper_tibble()
+  tmp_seaice <- tmp_raw %>%
+    activate("D2,D3,D0") %>%
+    hyper_tibble() %>%
+    left_join(., tmp_coord, by = c("xc", "yc")) %>% # Join latlon coordinates to sea ice data
+    mutate(date = ymd(format(as_datetime(time, origin = "1978-01-01", tz = "UTC"), format = "%Y%m%d"))) 
+  write_csv(tmp_seaice, file = paste0("data/remote_sensing/sea_ice/", year, month, day, "_laea_ice_conc.csv")) # Save as a csv file
+  file.remove(list.files("data/remote_sensing/sea_ice/tmp", full.names = T)) # Delete temporary netcdf and zip files
+}
+rm(request, tmp_raw, tmp_coord, tmp_seaice) # Remove unused variables
+```
+
 ```{r download-and-reproject-seaice-ICDR, eval=FALSE, message=FALSE}
 # Define projections: latlon (acoustic and CTD data), and laea (sea ice data)
 arctic_latlon <- raster(extent(-155, 35, 66, 85), crs = "+init=epsg:4326", res = c(2, 1))
@@ -151,11 +249,11 @@ for (d in dates) {
 rm(request, tmp_raw, tmp_coord, tmp_seaice, tmp) # Remove unused variables
 ```
 
-Plot data to see if reprojection worked.
+Plot data to see if download worked.
 
 ```{r plot-seaice-latlon-cdr, fig.align='center', fig.height=3.25, fig.width=6, message=FALSE, warning=FALSE, dpi=600}
-read_csv("data/remote_sensing/sea_ice/20150212_ice_conc.csv") %>%
-  ggplot(aes(x = lon, y = lat, fill = ice_conc)) + 
+read_csv("data/remote_sensing/sea_ice/20151231_laea_ice_conc.csv") #%>%
+  ggplot(aes(x = xc, y = yc, fill = ice_conc)) + 
   geom_tile() + 
   scale_fill_viridis_c("Ice concentration (%)") +
   ggtitle("2015-02-12 - CDR") + 
@@ -180,8 +278,8 @@ date_min_seaice <- c(as.POSIXct("2014-09-17", tz = "UTC"), # Define dates of min
                      as.POSIXct("2015-09-09", tz = "UTC"),
                      as.POSIXct("2016-09-10", tz = "UTC"),
                      as.POSIXct("2017-09-13", tz = "UTC"))
-seaice_2deg <- list.files("data/remote_sensing/sea_ice", pattern = "*_ice_conc.csv", full.names = T) %>% # List files in folder
-  map_dfr(.f = ~ read_csv(., col_types = list("n", "n", "D", "n", "n", "n", "n"))) %>% # Read sea ice files
+seaice_raw <- list.files("data/remote_sensing/sea_ice", pattern = "*laea_ice_conc.csv", full.names = T) %>% # List files in folder
+  map_dfr(.f = ~ read_csv(.)) %>% # Read sea ice files
   mutate(date = ymd(date),
          season = case_when(date >= date_min_seaice[1] & date <= date_min_seaice[2] ~ 2015,
                             date >= date_min_seaice[2] & date <= date_min_seaice[3] ~ 2016,
@@ -190,26 +288,27 @@ seaice_2deg <- list.files("data/remote_sensing/sea_ice", pattern = "*_ice_conc.c
          area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
                                  lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
                                  lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
-                       levels = c("BF_CAA", "BB", "SV", "Other")))
-seaice_2deg_season <- seaice_2deg %>% # Calculate metrics for each season
-  filter(is.na(season) == F) %>% # Remove data outside of seasons (early 2014 and late 2017)
-  mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
-  group_by(season, lat, lon) %>%
-  mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
-  summarise(total_day = n(),
-            seaice_duration = sum(ice_covered_day),
-            openwater_duration = total_day - seaice_duration,
-            mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
-seaice_2deg_year <- seaice_2deg %>% # Calculate metrics for each season
-  filter(year >= 2015) %>% # Remove data from 2014
-  mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
-  group_by(year, lat, lon) %>%
-  mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
-  summarise(total_day = n(),
-            seaice_duration = sum(ice_covered_day),
-            openwater_duration = total_day - seaice_duration,
-            mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
-save(seaice_2deg, seaice_2deg_season, seaice_2deg_year, file = "data/remote_sensing/remote_sensing_seaice_2deg.RData") # Save data
+                       levels = c("BF_CAA", "BB", "SV", "Other"))) %>%
+  dplyr::select(- time)
+# seaice_2deg_season <- seaice_raw %>% # Calculate metrics for each season
+#   filter(is.na(season) == F) %>% # Remove data outside of seasons (early 2014 and late 2017)
+#   mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
+#   group_by(season, lat, lon) %>%
+#   mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
+#   summarise(total_day = n(),
+#             seaice_duration = sum(ice_covered_day),
+#             openwater_duration = total_day - seaice_duration,
+#             mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
+# seaice_2deg_year <- seaice_2deg %>% # Calculate metrics for each season
+#   filter(year >= 2015) %>% # Remove data from 2014
+#   mutate(ice_covered_day = if_else(ice_conc > 15, 1, 0)) %>%
+#   group_by(year, lat, lon) %>%
+#   mutate(ice_breakup = case_when(ice_conc < 15 ~ max(date))) %>% # Define open water as ice_conc < 15 %
+#   summarise(total_day = n(),
+#             seaice_duration = sum(ice_covered_day),
+#             openwater_duration = total_day - seaice_duration,
+#             mean_ice_conc = round(mean(ice_conc, na.rm = T), 2))
+save(seaice_raw, file = "data/remote_sensing/remote_sensing_seaice_raw.RData") # Save data
 ```
 
 Plot data to see if calculations worked.
