--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -31,51 +31,99 @@ options(dplyr.summarise.inform = F) # Suppress summarise() warning
 
 # Preparing data
 
-I want to test whether temperature and salinity at mesopelagic depth, sea-ice concentration, open-water duration (a proxy for productivity) have an effect on the backscatter anomalies observed per year. I therefore combined gridded acoustic data—integrated mesopelagic NASC—with gridded CTD, and remote sensing data.
+I want to test whether temperature and salinity at mesopelagic depth, sea-ice concentration, open-water duration (a proxy for productivity) have an effect on the backscatter anomalies observed per year. I therefore combined gridded acoustic data—integrated mesopelagic NASC—with gridded CTD, and remote sensing data projected on either the WGS84 or the EASE-Grid 2.0 North.
 
 ```{r data-loading, message=FALSE}
+# Map projections
+cell_res <- 100 # Cell resolution in km
+arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
+projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
+res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
+
+arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic and CTD data
+                        crs = "EPSG:4326", 
+                        res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
+
+# Coastline shapefiles
 coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in latlon
-  spTransform(CRSobj = crs("EPSG:4326")) %>% # Make sure that the shapefile is in the right projection
+  spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
   fortify() %>% # Convert to a dataframe for ggplot
   rename(lon = long)
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
-  spTransform(CRSobj = crs("EPSG:4326")) %>% # Make sure that the shapefile is in the right projection
+  spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
-  spTransform(CRSobj = crs("EPSG:6931")) %>% # Project shapefile in laea
+  spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
   fortify() %>% # Convert to a dataframe for ggplot
   rename(xc = long, yc = lat)
 
+# Gridded acoustic, CTD, and sea ice data
 load("data/acoustics/SA_grids.RData") # Acoustic data
 load("data/CTD/CTD_grids.RData") # CTD data
 load("data/remote_sensing/seaice_grids.RData") # Remote sensing sea ice data
 ```
 
+## EPSG:6931 - EASE-Grid 2.0 North
+
+First I combine data using the EASE-Grid 2.0 North (EPSG:6931).
+
 ```{r combine-data}
-SA_join <- SA_anomaly_2deg %>%  # Tidy anomaly dataset for joining
-  dplyr::select(year, area, lat, lon, anomaly_NASC_int)
-CTD_join <- CTD_2deg %>% # Tidy CTD dataset for joining
-  dplyr::select(year, area, lat, lon, cons_temp, abs_sal)
-seaice_join <- seaice_2deg_year %>% # Tidy sea ice dataset for joining
-  dplyr::select(year, lat, lon, mean_ice_conc, openwater_duration, seaice_duration)
+SA_laea <- SA_grid_laea %>%  # Tidy anomaly dataset for joining
+  dplyr::select(-lat, -lon)
+CTD_laea <- CTD_grid_laea %>% # Tidy CTD dataset for joining
+  dplyr::select(-lat, -lon)
+seaice_laea <- seaice_grid_laea %>% # Tidy sea ice dataset for joining
+  dplyr::select(-lat, -lon)
 
-SA_CTD_seaice <- left_join(SA_join, seaice_join, by = c("year", "lon", "lat")) %>% # Join data
-  left_join(., CTD_join, by = c("year", "area", "lon", "lat")) %>%
-  mutate(anomaly_NASC_int = round(anomaly_NASC_int, 3))
-
-summary(SA_CTD_seaice)
+laea_SA_CTD_seaice <- left_join(SA_laea, seaice_laea, by = c("year", "area", "xc", "yc")) %>% # Join acoustic and seaice
+  rowwise() %>%
+  mutate(xc_na = if_else(is.na(mean_ice_conc) == T, xc, NaN),
+         yc_na = if_else(is.na(mean_ice_conc) == T, yc, NaN),
+         year_na = if_else(is.na(mean_ice_conc) == T, year, NaN), 
+         mean_ice_conc = if_else(is.na(mean_ice_conc) == T, mean(pull(subset(seaice_grid_laea,
+                                                                             xc >= xc_na - 200 &
+                                                                               xc <= xc_na + 200 & 
+                                                                               yc >= yc_na - 200 & 
+                                                                               yc <= yc_na + 200 & 
+                                                                               year == year_na,
+                                                                             select = mean_ice_conc),
+                                                                      mean_ice_conc),
+                                                                 na.rm = T),
+                                 mean_ice_conc),
+         openwater_duration = if_else(is.na(openwater_duration) == T, mean(pull(subset(seaice_grid_laea,
+                                                                                       xc >= xc_na - 200 &
+                                                                                         xc <= xc_na + 200 & 
+                                                                                         yc >= yc_na - 200 & 
+                                                                                         yc <= yc_na + 200 & 
+                                                                                         year == year_na,
+                                                                                       select = openwater_duration),
+                                                                                openwater_duration),
+                                                                           na.rm = T),
+                                      openwater_duration),
+         seaice_duration = if_else(is.na(seaice_duration) == T, mean(pull(subset(seaice_grid_laea,
+                                                                                 xc >= xc_na - 200 &
+                                                                                   xc <= xc_na + 200 & 
+                                                                                   yc >= yc_na - 200 & 
+                                                                                   yc <= yc_na + 200 & 
+                                                                                   year == year_na,
+                                                                                 select = seaice_duration),
+                                                                          seaice_duration),
+                                                                     na.rm = T),
+                                   seaice_duration)) %>%
+  dplyr::select(-xc_na, -yc_na, -year_na)
 ```
 
 **PROBLEM: Some cells do not have temperature and salinity data (red tiles). This needs to be fixed before modeling.**
 
-```{r map-missing-temp-sal, fig.align='center', fig.height=6, fig.width=6, warning=FALSE}
-SA_CTD_seaice %>%
-  ggplot(aes(x = lon,  y = lat)) +
-  geom_polygon(data = coastlines_10m, aes(x = lon, y = lat, group = group), fill = "grey70") +
-  geom_tile(aes(fill = cons_temp), color = "grey30") + 
+```{r map-missing-temp-sal, fig.align='center', fig.width=10}
+CTD_grid_laea %>%
+  ggplot(aes(x = xc,  y = yc)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  geom_tile(aes(fill = mean_cons_temp), color = "grey30") +
   scale_fill_viridis_c(na.value = "red") +
-  facet_wrap(~ year, ncol = 1) +
-  coord_cartesian(ylim = c(65, 84.5), xlim = c(-155, 37), expand = c(0, 0)) 
+  facet_wrap(~ year, ncol = 3) +
+  coord_fixed(xlim = c(-2700, 1300), ylim = c(-1900, 2000), expand = c(0, 0)) + 
+  theme(legend.position = "right")
 ```
 
 ```{r scatterplots, message=FALSE, warning=FALSE, fig.align='center'}
